--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <li class="navigation__item"><a href="#intro" class="navigation__link">Giới thiệu</a></li>
                     <li class="navigation__item"><a href="#algorithm" class="navigation__link">Thuật toán</a></li>
                     <li class="navigation__item"><a href="#summary" class="navigation__link">Tổng kết</a></li>
-                    <li class="navigation__item"><a href="simulation" class="navigation__link">Mô phỏng</a></li>
+                    <li class="navigation__item"><a href="#simulation" class="navigation__link">Mô phỏng</a></li>
                     <li class="navigation__item"><a href="https://visualize-bfs-dfs-maze-game.netlify.app/" target="_blank" class="navigation__link">Maze Game</a></li>
                 </ul>
             </div>
