--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         tổng trọng số các cạnh càng nhỏ càng tốt. Số cạnh trong MST: V-1 (V - không có đỉnh trong Đồ
                         thị).
                     </p>
-                    <a href="https://www.javatpoint.com/minimum-spanning-tree-introduction" class="btn-text">Tìm hiểu &rarr;</a>
+                    <a href="https://www.javatpoint.com/minimum-spanning-tree-introduction" target="_blank" class="btn-text">Tìm hiểu &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
                     <div class="composition">
